fix(chats): word-wrap file names

--- a/src/views/chats/components/ChatDetails.css
+++ b/src/views/chats/components/ChatDetails.css
@@ -128,6 +128,7 @@
 
 .file-name {
     font-weight: bold;
+    word-wrap: break-word;
 }
 
 .file-size {
